--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>Resolvedor de Sudoku</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <h1 style="text-align: center;">Resolvedor de Sudoku</h1>
   <table id="sudokuBoard"></table>
   <button id="solveBtn">Resolver</button>
+  <button id="clearBtn">Limpar</button>
 
   <script>
     const board = document.getElementById('sudokuBoard');
@@ -39,7 +42,7 @@
         }
       });
 
-      const res = await fetch('http://localhost:5000/solve', {
+      const res = await fetch('http://localhost:3001/solve', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ puzzle: data })
@@ -59,6 +62,13 @@
         }
       });
     });
+    document.getElementById('clearBtn').addEventListener('click', () => {
+      document.querySelectorAll('input').forEach(input => {
+        input.value = '';
+        input.classList.remove('auto');
+      });
+    });
   </script>
 </body>
+
 </html>
